--- a/moviereviews/movie/templates/home.html
+++ b/moviereviews/movie/templates/home.html
@@ -13,13 +13,32 @@
         <form action="">
             <div class="mb-3">
               <label class="form-label">Search for Movie</label>
-              <input type="text" name="SearchMovie" class="form-control" />
+              <input type="text" name="searchMovie" class="form-control" />
             </div>
             <button type="submit" class="btn btn-primary">
                 Search
             </button>
         </form>
-        Searching for {{ searchTerm }}
+        <p> Searching for: {{ searchTerm }} </p> 
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% for movie in movies %}
+            <div v-for="movie in movies" class="col">
+              <div class="card">
+                <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                  <p class="card-text">{{ movie.description }}</p>
+                  {% if movie.url %}
+                  <a href="{{ movie.url }}"
+                  class="btn btn-primary">
+                    Movie Link
+                  </a>
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+        </div>
         <br>
         <br>
         <h2>Join our mailing list:</h2>
