--- a/moviereviews/movie/templates/home.html
+++ b/moviereviews/movie/templates/home.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies App</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container">
+
+    {% extends 'base.html' %}
+    {% block content %}
         <form action="">
             <div class="mb-3">
               <label class="form-label">Search for Movie</label>
@@ -39,21 +30,5 @@
             </div>
             {% endfor %}
         </div>
-        <br>
-        <br>
-        <h2>Join our mailing list:</h2>
-        <form action="{% url 'signup' %}">
-            <div class="mb-3">
-                <label for="email" class="form-label">
-                    Enter your email:
-                </label>
-                <input type="email" class="form-control" name="email" />
-            </div>
-            <button type="submit" class="btn btn-primary">
-                Sign Up
-            </button>
-        </form>
-    </div>
+    {% endblock content %}
     
-</body>
-</html>
