--- a/moviereviews/movie/templates/home.html
+++ b/moviereviews/movie/templates/home.html
@@ -17,7 +17,9 @@
               <div class="card">
                 <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                  <a href="{% url 'detail' movie.id %}">
+                    <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+                  </a>
                   <p class="card-text">{{ movie.description }}</p>
                   {% if movie.url %}
                   <a href="{{ movie.url }}"
